tests/paczka1/small_fuzzy/51033299.err
Error in line 1: sa9 S136 65,2
Error in line 6: sa9 S51 33,6
Error in line 10: QSr S51 35,4
Error in line 13: QSr S136 56,0
